--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@ html {
 
 article,
 aside,
+address,
 details,
 figcaption,
 figure,
@@ -26,6 +27,7 @@ hgroup,
 nav,
 section {
     display: block;
+    font-style: normal;
 }
 
 body,
@@ -252,12 +254,6 @@ a img {
 }
 
 /* ====================== Restaurant Details ====================== */
-.inside header {
-    /* position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 1000; */
-}
 .inside #map-container {
     background: blue none repeat scroll 0 0;
     height: 50vh;
@@ -267,11 +263,6 @@ a img {
     background-color: #ccc;
     height: 100%;
     width: 100%;
-}
-.inside #footer {
-    /* bottom: 0;
-    position: absolute;
-    width: 50%; */
 }
 #restaurant-name {
     color: #f18200;
@@ -283,9 +274,6 @@ a img {
     text-transform: uppercase;
     line-height: 1.1;
 }
-/* #restaurant-img {
-    width: 90%;
-} */
 #restaurant-address {
     font-size: 0.937rem;
     margin: 10px 0px;
@@ -307,9 +295,6 @@ a img {
     border-top: 1px solid #fff;
     padding: 20px 15px 20px;
 }
-/* #reviews-container {
-    padding: 30px 40px 80px;
-} */
 #reviews-container h2 {
     color: #f58500;
     font-size: 24pt;
@@ -321,7 +306,7 @@ a img {
     margin: 0;
     padding: 0;
 }
-#reviews-list li {
+#reviews-list .review-item {
     background-color: #fff;
     border: 2px solid #f3f3f3;
     display: block;
@@ -331,8 +316,13 @@ a img {
     padding: 0 20px 20px;
     position: relative;
 }
-#reviews-list li p {
+#reviews-list .review-item .review-name,
+#reviews-list .review-item .review-date,
+#reviews-list .review-item p {
     margin: 0 0 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-style: normal;
+    font-weight: normal;
 }
 #restaurant-hours .restaurant-hours-row {
     color: #666;
@@ -342,6 +332,31 @@ a img {
 #restaurant-hours .restaurant-hours-time {
     padding-left: 10px
 }
-/* #restaurant-hours .restaurant-hours-cell {
 
-} */
+@media screen and (min-width: 1024px) {
+    .inside #map-container {
+        position: fixed;
+        top: 124px;
+        right: 0;
+        height: 100%;
+        width: 50%;
+    }
+
+    .inside .restaurant-info {
+        width: 50%;
+    }
+
+    .inside #header {
+        position: fixed;
+        width: 100%;
+        left: 0;
+        top: 0;
+        z-index: 1000;
+    }
+
+    .inside #footer {
+        bottom: 0;
+        position: absolute;
+        width: 50%;
+    }
+}
