--- a/css/styles.css
+++ b/css/styles.css
@@ -295,7 +295,7 @@ a img {
     border-top: 1px solid #fff;
     padding: 20px 15px 20px;
 }
-#reviews-container h2 {
+#reviews-container .reviews-title {
     color: #f58500;
     font-size: 24pt;
     font-weight: 300;
